lab-1/y.output
State 2 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: assignment
    5          | assignment ':'
    6          | expression ':'
    7          | ID ':'

    8 assignment: LET ID '=' expression

    9 expression: NUMBER
   10           | ID
   11           | expression '+' expression
   12           | expression '-' expression
   13           | expression '*' expression
   14           | expression '/' expression
   15           | '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15
')' (41) 15
'*' (42) 13
'+' (43) 11
'-' (45) 12
'/' (47) 14
':' (58) 5 6 7
'=' (61) 8
error (256)
NUMBER (258) 9
ID (259) 7 8 10
LET (260) 8


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
program (15)
    on left: 1, on right: 0
statement_list (16)
    on left: 2 3, on right: 1 3
statement (17)
    on left: 4 5 6 7, on right: 2 3
assignment (18)
    on left: 8, on right: 4 5
expression (19)
    on left: 9 10 11 12 13 14 15, on right: 6 8 11 12 13 14 15


state 0

    0 $accept: . program $end

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2
    LET     shift, and go to state 3
    '('     shift, and go to state 4

    program         go to state 5
    statement_list  go to state 6
    statement       go to state 7
    assignment      go to state 8
    expression      go to state 9


state 1

    9 expression: NUMBER .

    $default  reduce using rule 9 (expression)


state 2

    7 statement: ID . ':'
   10 expression: ID .

    ':'  shift, and go to state 10

    ':'       [reduce using rule 10 (expression)]
    $default  reduce using rule 10 (expression)


state 3

    8 assignment: LET . ID '=' expression

    ID  shift, and go to state 11


state 4

   15 expression: '(' . expression ')'

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 12
    '('     shift, and go to state 4

    expression  go to state 13


state 5

    0 $accept: program . $end

    $end  shift, and go to state 14


state 6

    1 program: statement_list .
    3 statement_list: statement_list . statement

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 2
    LET     shift, and go to state 3
    '('     shift, and go to state 4

    $default  reduce using rule 1 (program)

    statement   go to state 15
    assignment  go to state 8
    expression  go to state 9


state 7

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


state 8

    4 statement: assignment .
    5          | assignment . ':'

    ':'  shift, and go to state 16

    $default  reduce using rule 4 (statement)


state 9

    6 statement: expression . ':'
   11 expression: expression . '+' expression
   12           | expression . '-' expression
   13           | expression . '*' expression
   14           | expression . '/' expression

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ':'  shift, and go to state 21


state 10

    7 statement: ID ':' .

    $default  reduce using rule 7 (statement)


state 11

    8 assignment: LET ID . '=' expression

    '='  shift, and go to state 22


state 12

   10 expression: ID .

    $default  reduce using rule 10 (expression)


state 13

   11 expression: expression . '+' expression
   12           | expression . '-' expression
   13           | expression . '*' expression
   14           | expression . '/' expression
   15           | '(' expression . ')'

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    ')'  shift, and go to state 23


state 14

    0 $accept: program $end .

    $default  accept


state 15

    3 statement_list: statement_list statement .

    $default  reduce using rule 3 (statement_list)


state 16

    5 statement: assignment ':' .

    $default  reduce using rule 5 (statement)


state 17

   11 expression: expression '+' . expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 12
    '('     shift, and go to state 4

    expression  go to state 24


state 18

   12 expression: expression '-' . expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 12
    '('     shift, and go to state 4

    expression  go to state 25


state 19

   13 expression: expression '*' . expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 12
    '('     shift, and go to state 4

    expression  go to state 26


state 20

   14 expression: expression '/' . expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 12
    '('     shift, and go to state 4

    expression  go to state 27


state 21

    6 statement: expression ':' .

    $default  reduce using rule 6 (statement)


state 22

    8 assignment: LET ID '=' . expression

    NUMBER  shift, and go to state 1
    ID      shift, and go to state 12
    '('     shift, and go to state 4

    expression  go to state 28


state 23

   15 expression: '(' expression ')' .

    $default  reduce using rule 15 (expression)


state 24

   11 expression: expression . '+' expression
   11           | expression '+' expression .
   12           | expression . '-' expression
   13           | expression . '*' expression
   14           | expression . '/' expression

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20

    $default  reduce using rule 11 (expression)


state 25

   11 expression: expression . '+' expression
   12           | expression . '-' expression
   12           | expression '-' expression .
   13           | expression . '*' expression
   14           | expression . '/' expression

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20

    $default  reduce using rule 12 (expression)


state 26

   11 expression: expression . '+' expression
   12           | expression . '-' expression
   13           | expression . '*' expression
   13           | expression '*' expression .
   14           | expression . '/' expression

    $default  reduce using rule 13 (expression)


state 27

   11 expression: expression . '+' expression
   12           | expression . '-' expression
   13           | expression . '*' expression
   14           | expression . '/' expression
   14           | expression '/' expression .

    $default  reduce using rule 14 (expression)


state 28

    8 assignment: LET ID '=' expression .
   11 expression: expression . '+' expression
   12           | expression . '-' expression
   13           | expression . '*' expression
   14           | expression . '/' expression

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20

    $default  reduce using rule 8 (assignment)
